--- a/index.html
+++ b/index.html
@@ -1,29 +1,53 @@
-# Política de Privacidad
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Política de Privacidad</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 2rem auto;
+      max-width: 800px;
+      padding: 0 1rem;
+      line-height: 1.6;
+      color: #333;
+    }
+    h1 {
+      color: #2c3e50;
+    }
+    h2 {
+      margin-top: 1.5rem;
+      color: #34495e;
+    }
+  </style>
+</head>
+<body>
+  <h1>Política de Privacidad</h1>
+  <p><strong>Fecha de vigencia:</strong> 28 de julio de 2025</p>
 
-Fecha de vigencia: [28 de julio de 2025]
+  <p>Esta aplicación es de uso interno y fue desarrollada por [VAN Technology]. El acceso está limitado a miembros autorizados de la organización.</p>
 
-Esta aplicación es de uso interno y fue desarrollada por [VAN Technology]. El acceso está limitado a miembros autorizados de la organización.
+  <h2>Información que recopilamos</h2>
+  <ul>
+    <li>Dirección de correo electrónico (para autenticación)</li>
+    <li>Actividad básica dentro de la aplicación (uso interno)</li>
+  </ul>
 
-## Información que recopilamos
+  <h2>Uso de la información</h2>
+  <p>La información recopilada es utilizada exclusivamente para:</p>
+  <ul>
+    <li>Verificar identidad del usuario</li>
+    <li>Brindar acceso a funcionalidades internas</li>
+  </ul>
 
-- Dirección de correo electrónico (para autenticación).
-- Actividad básica dentro de la aplicación (uso interno).
+  <h2>Compartición de la información</h2>
+  <p>No compartimos tu información con terceros. Toda la información permanece dentro de los servidores autorizados de [VAN Technolgy].</p>
 
-## Uso de la información
+  <h2>Seguridad</h2>
+  <p>Implementamos medidas razonables para proteger tus datos. El acceso a esta app requiere autenticación mediante OAuth 2.0.</p>
 
-La información recopilada es utilizada exclusivamente para:
-- Verificar identidad del usuario.
-- Brindar acceso a funcionalidades internas.
-
-## Compartición de la información
-
-No compartimos tu información con terceros. Toda la información permanece dentro de los servidores autorizados de [tu empresa/organización].
-
-## Seguridad
-
-Implementamos medidas razonables para proteger tus datos. El acceso a esta app requiere autenticación mediante OAuth 2.0.
-
-## Contacto
-
-Para cualquier consulta, podés escribirnos a: [van.technology.ar@gmail.com]
-
+  <h2>Contacto</h2>
+  <p>Para cualquier consulta, podés escribirnos a: <a href="van.technology.ar@gmail.com">van.technology.ar@gmail.com</a></p>
+</body>
+</html>
